desktop view completed. Still working on mobile issues

--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,10 @@
 body{
     width: 480px;
-    margin-left: auto;
+    display: grid;
+    grid-template-columns: 240px 240px;
+    grid-template-rows: 75px 150px 125px 125px 250px, 250px, 80px;
     margin-right: auto;
+    margin-left: auto;
 }
 
 .container{
@@ -9,8 +12,6 @@ body{
     border-style: solid;
     border-width: 1px;
     border-color: black;
-    display:table;
-    text-align: center;
 }
 
 /*desktopish view, more like tablet landscape I think*/
@@ -19,6 +20,11 @@ body{
 
     body{
         width: 960px;
+        display: grid;
+        grid-template-columns: 200px 190px 190px 190px 190px;
+        grid-template-rows: 100px 200px 250px 150px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .container{
@@ -26,8 +32,6 @@ body{
         border-style: solid;
         border-width: 1px;
         border-color: black;
-        display:table;
-        text-align: center;
     }
 
 }
