--- a/css/layout.css
+++ b/css/layout.css
@@ -1,20 +1,17 @@
 header{
-    width: 480px;
-    height: 75px;
+    grid-column: 1/3;
+    grid-row: 1/2;
     background-color: red;
 }
-
-footer{
-    clear: both;
-    width: 480px;
-    height: 80px;
-    background-color: violet;
-}
-
 aside{
-    width: 480px;
-    height: 150px;
+    grid-column: 1/3;
+    grid-row: 2/3;  
     background-color:orangered;
+}
+footer{
+    grid-column: 1/3;
+    grid-row: 7/8;
+    background-color: violet;
 }
 
 /*desktopish view, more like tablet landscape I think*/
@@ -34,6 +31,22 @@ aside{
 @media all and (min-width: 960px){
 
     header{
+        grid-column: 1/6;
+        grid-row: 1/2;
+        background-color: violet;
+    }
+    aside{
+        grid-column: 1/2;
+        grid-row: 2/5;
+        background-color: blueviolet;
+    }
+    footer{
+        grid-column: 2/6;
+        grid-row: 4/5;
+        background-color: red;        
+    }
+
+    /* header{
         width: 960px;
         height: 100px;
         background-color: violet;
@@ -52,4 +65,4 @@ aside{
         background-color: blueviolet;
     }
 
-}
+} */
